--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "simplecrawler",
-  "description": "Very straigntforward web crawler. Uses EventEmitter. Generates queue statistics and has a basic cache mechanism with extensible backend.",
+  "description": "Very straightforward web crawler. Uses EventEmitter. Generates queue statistics and has a basic cache mechanism with extensible backend.",
   "version": "0.3.11",
   "homepage": "http://github.com/cgiffard/node-simplecrawler",
   "author": "Christopher Giffard <christopher.giffard@cgiffard.com>",
