--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "eventemitter"
   ],
   "scripts": {
+    "jshint": "jshint --reporter node_modules/jshint-stylish lib/",
     "test": "mocha -R spec -t 5000"
   },
   "bin": {
@@ -31,9 +32,10 @@
     "node": ">=0.8.0"
   },
   "devDependencies": {
-    "mocha": "~1.8.2",
-    "jshint": "^2.7.0",
-    "chai": "~1.2.0"
+    "chai": "~1.2.0",
+    "jshint": "^2.8.0",
+    "jshint-stylish": "^2.0.0",
+    "mocha": "~1.8.2"
   },
   "dependencies": {
     "URIjs": "^1.15.0"
