--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
   "dependencies": {
     "iconv-lite": "^0.4.13",
     "robots-parser": "^1.0.0",
-    "urijs": "^1.16.1"
+    "urijs": "^1.16.1",
+    "xmldom": "^0.1.22"
   },
   "devDependencies": {
     "chai": "^3.2.0",
