--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "simplecrawler",
   "description": "Very straightforward, event driven web crawler. Features a flexible queue interface and a basic cache mechanism with extensible backend.",
-  "version": "1.1.9",
+  "version": "1.2.0",
   "homepage": "https://github.com/simplecrawler/simplecrawler",
   "author": "Christopher Giffard <christopher.giffard@cgiffard.com>",
   "maintainers": [
@@ -27,7 +27,8 @@
   ],
   "scripts": {
     "lint": "eslint example/ lib/ test/",
-    "mocha": "mocha -t 5000 --exit",
+    "lintfix": "eslint example/ lib/ test/ --fix",
+    "mocha": "mocha -R spec -t 5000 --exit",
     "test": "npm run lint && npm run mocha",
     "docs": "jsdoc2md -t jsdoc2md/README.hbs --partial jsdoc2md/*.hbs --files lib/*.js > README.md"
   },
@@ -36,8 +37,10 @@
   },
   "main": "./lib/index.js",
   "dependencies": {
+    "abort-controller": "^3.0.0",
     "async": "^3.1.0",
     "iconv-lite": "^0.5.0",
+    "node-fetch": "^2.6.0",
     "robots-parser": "^2.1.1",
     "urijs": "^1.19.1"
   },
